syntax = "proto3";
package product;
option java_package = "com.ferza17.ecommercemicroservicesv2.proto.v1.product";

import "external/validate/validate.proto";
// PRODUCT REQUEST DEFINITION

message FindProductsWithPaginationRequest {
  repeated string ids = 1;
  repeated string names = 2;
  int32 page = 3 [(validate.rules).int32.gt = 0];
  int32 limit = 4 [(validate.rules).int32.gt = 0];
}

message FindProductByIdRequest {
  string id = 1 [(validate.rules).string.min_len = 1];
}

message CreateProductRequest {
  string name = 1 [(validate.rules).string.min_len = 1];
  string description = 2 [(validate.rules).string.min_len = 1];
  string uom = 3 [(validate.rules).string.min_len = 1];
  string image = 4 [(validate.rules).string.min_len = 1];
  double price = 5 [(validate.rules).double.gt = 0];
  int32 stock = 6 [(validate.rules).int32.gt = 0];
}

message UpdateProductByIdRequest {
  string id = 1 [(validate.rules).string.min_len = 0];
  optional string name = 2 [(validate.rules).string.min_len = 1];
  optional string description = 3 [(validate.rules).string.min_len = 1];
  optional string uom = 4 [(validate.rules).string.min_len = 1];
  optional string image = 5 [(validate.rules).string.min_len = 1];
  optional double price = 6 [(validate.rules).double.gt = 0];
  optional int32 stock = 7 [(validate.rules).int32.gt = 0];
}

message DeleteProductByIdRequest {
  string id = 1 [(validate.rules).string.min_len = 1];
}
